Badges: fixed contrasty number of repos badge

--- a/github-dark.css
+++ b/github-dark.css
@@ -655,6 +655,11 @@
   .js-gshot {
     background: #000 !important;
   }
+  /* soft badges */
+  .box-title-count {
+    background-color: #555 !important;
+    color: #ccc !important;
+  }
   /* svg styling */
   svg|line, svg|rect, svg|path {
     shape-rendering: geometricPrecision !important;
